<resources>
    <string name="app_provider_description">Provider of pokebattle to access data</string>
    <string name="app_provider_name">Provider of pokebattle</string>
    <string name="common_create">Create</string>
    <string name="common_delete">Del</string>
    <string name="common_edit">Edit</string>
    <string name="common_network_error">Connection error</string>
    <string name="dialog_delete_message">Are you sure you want to delete this item ?</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="image_error_null">Image is null</string>
    <string name="menu_item_create">Add</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_save">Save</string>
    <string name="no_network_error">No internet connection available</string>
    <string name="pokearene_badge_dialog_title">Select badge</string>
    <string name="pokearene_badge_invalid_field_error">Field Badge is invalid.</string>
    <string name="pokearene_badge_label">Badge</string>
    <string name="pokearene_dresseurs_dialog_title">Select dresseurs</string>
    <string name="pokearene_dresseurs_label">Dresseurs</string>
    <string name="pokearene_empty_list">PokeArene list is empty !</string>
    <string name="pokearene_error_create">PokeArene creation error…</string>
    <string name="pokearene_error_edit">PokeArene edition error…</string>
    <string name="pokearene_maitre_dialog_title">Select maitre</string>
    <string name="pokearene_maitre_invalid_field_error">Field Maitre is invalid.</string>
    <string name="pokearene_maitre_label">Maitre</string>
    <string name="pokearene_nom_invalid_field_error">Field Nom is invalid.</string>
    <string name="pokearene_nom_label">Nom</string>
    <string name="pokearene_not_found">No PokeArene found to display…</string>
    <string name="pokearene_position_dialog_title">Select position</string>
    <string name="pokearene_position_invalid_field_error">Field Position is invalid.</string>
    <string name="pokearene_position_label">Position</string>
    <string name="pokearene_progress_load_message">PokeArene is loading…</string>
    <string name="pokearene_progress_load_relations_message">PokeArene related entities are loading...</string>
    <string name="pokearene_progress_load_relations_title">PokeArene related entities loading</string>
    <string name="pokearene_progress_load_title">PokeArene Loading progress</string>
    <string name="pokearene_progress_save_message">PokeArene is saving to database…</string>
    <string name="pokearene_progress_save_title">PokeArene save progress</string>
    <string name="pokearene_zone_dialog_title">Select zone</string>
    <string name="pokearene_zone_invalid_field_error">Field Zone is invalid.</string>
    <string name="pokearene_zone_label">Zone</string>
    <string name="pokeattaque_empty_list">PokeAttaque list is empty !</string>
    <string name="pokeattaque_error_create">PokeAttaque creation error…</string>
    <string name="pokeattaque_error_edit">PokeAttaque edition error…</string>
    <string name="pokeattaque_nom_invalid_field_error">Field Nom is invalid.</string>
    <string name="pokeattaque_nom_label">Nom</string>
    <string name="pokeattaque_not_found">No PokeAttaque found to display…</string>
    <string name="pokeattaque_precision_invalid_field_error">Field Precision is invalid.</string>
    <string name="pokeattaque_precision_label">Precision</string>
    <string name="pokeattaque_progress_load_message">PokeAttaque is loading…</string>
    <string name="pokeattaque_progress_load_relations_message">PokeAttaque related entities are loading...</string>
    <string name="pokeattaque_progress_load_relations_title">PokeAttaque related entities loading</string>
    <string name="pokeattaque_progress_load_title">PokeAttaque Loading progress</string>
    <string name="pokeattaque_progress_save_message">PokeAttaque is saving to database…</string>
    <string name="pokeattaque_progress_save_title">PokeAttaque save progress</string>
    <string name="pokeattaque_puissance_invalid_field_error">Field Puissance is invalid.</string>
    <string name="pokeattaque_puissance_label">Puissance</string>
    <string name="pokeattaque_type_dialog_title">Select type</string>
    <string name="pokeattaque_type_invalid_field_error">Field Type is invalid.</string>
    <string name="pokeattaque_type_label">Type</string>
    <string name="pokebadge_bonus_label">Bonus</string>
    <string name="pokebadge_empty_list">PokeBadge list is empty !</string>
    <string name="pokebadge_error_create">PokeBadge creation error…</string>
    <string name="pokebadge_error_edit">PokeBadge edition error…</string>
    <string name="pokebadge_nom_invalid_field_error">Field Nom is invalid.</string>
    <string name="pokebadge_nom_label">Nom</string>
    <string name="pokebadge_not_found">No PokeBadge found to display…</string>
    <string name="pokebadge_progress_load_message">PokeBadge is loading…</string>
    <string name="pokebadge_progress_load_relations_message">PokeBadge related entities are loading...</string>
    <string name="pokebadge_progress_load_relations_title">PokeBadge related entities loading</string>
    <string name="pokebadge_progress_load_title">PokeBadge Loading progress</string>
    <string name="pokebadge_progress_save_message">PokeBadge is saving to database…</string>
    <string name="pokebadge_progress_save_title">PokeBadge save progress</string>
    <string name="pokedresseur_empty_list">PokeDresseur list is empty !</string>
    <string name="pokedresseur_error_create">PokeDresseur creation error…</string>
    <string name="pokedresseur_error_edit">PokeDresseur edition error…</string>
    <string name="pokedresseur_login_invalid_field_error">Field Login is invalid.</string>
    <string name="pokedresseur_login_label">Login</string>
    <string name="pokedresseur_not_found">No PokeDresseur found to display…</string>
    <string name="pokedresseur_npcs_dialog_title">Select npcs</string>
    <string name="pokedresseur_npcs_label">Npcs</string>
    <string name="pokedresseur_password_invalid_field_error">Field Password is invalid.</string>
    <string name="pokedresseur_password_label">Password</string>
    <string name="pokedresseur_progress_load_message">PokeDresseur is loading…</string>
    <string name="pokedresseur_progress_load_relations_message">PokeDresseur related entities are loading...</string>
    <string name="pokedresseur_progress_load_relations_title">PokeDresseur related entities loading</string>
    <string name="pokedresseur_progress_load_title">PokeDresseur Loading progress</string>
    <string name="pokedresseur_progress_save_message">PokeDresseur is saving to database…</string>
    <string name="pokedresseur_progress_save_title">PokeDresseur save progress</string>
    <string name="pokedresseur_pseudo_invalid_field_error">Field Pseudo is invalid.</string>
    <string name="pokedresseur_pseudo_label">Pseudo</string>
    <string name="pokenpc_badge_dialog_title">Select badge</string>
    <string name="pokenpc_badge_label">Badge</string>
    <string name="pokenpc_description_invalid_field_error">Field Description is invalid.</string>
    <string name="pokenpc_description_label">Description</string>
    <string name="pokenpc_empty_list">PokeNpc list is empty !</string>
    <string name="pokenpc_error_create">PokeNpc creation error…</string>
    <string name="pokenpc_error_edit">PokeNpc edition error…</string>
    <string name="pokenpc_nom_invalid_field_error">Field Nom is invalid.</string>
    <string name="pokenpc_nom_label">Nom</string>
    <string name="pokenpc_not_found">No PokeNpc found to display…</string>
    <string name="pokenpc_objets_dialog_title">Select objets</string>
    <string name="pokenpc_objets_label">Objets</string>
    <string name="pokenpc_pokemons_dialog_title">Select pokemons</string>
    <string name="pokenpc_pokemons_label">Pokemons</string>
    <string name="pokenpc_position_dialog_title">Select position</string>
    <string name="pokenpc_position_label">Position</string>
    <string name="pokenpc_profession_label">Profession</string>
    <string name="pokenpc_progress_load_message">PokeNpc is loading…</string>
    <string name="pokenpc_progress_load_relations_message">PokeNpc related entities are loading...</string>
    <string name="pokenpc_progress_load_relations_title">PokeNpc related entities loading</string>
    <string name="pokenpc_progress_load_title">PokeNpc Loading progress</string>
    <string name="pokenpc_progress_save_message">PokeNpc is saving to database…</string>
    <string name="pokenpc_progress_save_title">PokeNpc save progress</string>
    <string name="pokenpc_team_dialog_title">Select team</string>
    <string name="pokenpc_team_label">Team</string>
    <string name="pokenpc_zone_dialog_title">Select zone</string>
    <string name="pokenpc_zone_label">Zone</string>
    <string name="pokeobjet_empty_list">PokeObjet list is empty !</string>
    <string name="pokeobjet_error_create">PokeObjet creation error…</string>
    <string name="pokeobjet_error_edit">PokeObjet edition error…</string>
    <string name="pokeobjet_nom_invalid_field_error">Field Nom is invalid.</string>
    <string name="pokeobjet_nom_label">Nom</string>
    <string name="pokeobjet_not_found">No PokeObjet found to display…</string>
    <string name="pokeobjet_progress_load_message">PokeObjet is loading…</string>
    <string name="pokeobjet_progress_load_relations_message">PokeObjet related entities are loading...</string>
    <string name="pokeobjet_progress_load_relations_title">PokeObjet related entities loading</string>
    <string name="pokeobjet_progress_load_title">PokeObjet Loading progress</string>
    <string name="pokeobjet_progress_save_message">PokeObjet is saving to database…</string>
    <string name="pokeobjet_progress_save_title">PokeObjet save progress</string>
    <string name="pokeobjet_quantity_invalid_field_error">Field Quantity is invalid.</string>
    <string name="pokeobjet_quantity_label">Quantity</string>
    <string name="pokeobjet_type_dialog_title">Select type</string>
    <string name="pokeobjet_type_invalid_field_error">Field Type is invalid.</string>
    <string name="pokeobjet_type_label">Type</string>
    <string name="pokepokemon_attaque1_dialog_title">Select attaque1</string>
    <string name="pokepokemon_attaque1_label">Attaque1</string>
    <string name="pokepokemon_attaque2_dialog_title">Select attaque2</string>
    <string name="pokepokemon_attaque2_label">Attaque2</string>
    <string name="pokepokemon_attaque3_dialog_title">Select attaque3</string>
    <string name="pokepokemon_attaque3_label">Attaque3</string>
    <string name="pokepokemon_attaque4_label">Attaque4</string>
    <string name="pokepokemon_capture_date_title">Select capture date</string>
    <string name="pokepokemon_capture_label">Capture</string>
    <string name="pokepokemon_capture_time_title">Select capture time</string>
    <string name="pokepokemon_niveau_label">Niveau</string>
    <string name="pokepokemon_surnom_label">Surnom</string>
    <string name="pokepokemon_type_label">Type</string>
    <string name="poketypepokemon_attaque_label">Attaque</string>
    <string name="poketypepokemon_attaque_spe_label">Attaque_spe</string>
    <string name="poketypepokemon_defence_label">Defence</string>
    <string name="poketypepokemon_defence_spe_label">Defence_spe</string>
    <string name="poketypepokemon_evolue_label">Evolue</string>
    <string name="poketypepokemon_nom_label">Nom</string>
    <string name="poketypepokemon_pokedex_label">Pokedex</string>
    <string name="poketypepokemon_pv_label">Pv</string>
    <string name="poketypepokemon_types_label">Types</string>
    <string name="poketypepokemon_vitesse_label">Vitesse</string>
    <string name="poketypepokemon_zones_label">Zones</string>
</resources>